Fix issues raised by Sonar.